avarage changed
